Modify code block overflow. Build-website post. Minor fixes

--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -15,4 +15,6 @@ pre {
   text-align: left !important;
   direction: ltr !important;
   padding: 1rem;
+  overflow: auto;
+  overflow-y: hidden;
 }
